Don't make kxmlgui deal with the toolbar either

The toolbar in discover shouldn't be played around, there's little to win
and much to lose.

BUG: 326713